Fixed alignment of mobile menu btn.

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -37,6 +37,10 @@ a:hover {
   font-size: 1em;
 }
 
+.usa-menu-btn {
+  margin-left: auto;
+}
+
 /* SEARCH PAGE */
 .search-page {
   margin-top: 150px;
